# src/laravel/openapi/public-site.json
@@ -412,11 +412,23 @@
                                                         },
                                                         "contextual_cursor": {
                                                             "type": "boolean"
+                                                        },
+                                                        "feed": {
+                                                            "type": "object",
+                                                            "properties": {
+                                                                "flat_cards": {
+                                                                    "type": "boolean"
+                                                                }
+                                                            },
+                                                            "required": [
+                                                                "flat_cards"
+                                                            ]
                                                         }
                                                     },
                                                     "required": [
                                                         "content_actions",
-                                                        "contextual_cursor"
+                                                        "contextual_cursor",
+                                                        "feed"
                                                     ]
                                                 },
                                                 "seo": {
@@ -917,67 +929,12 @@
                                                 ]
                                             }
                                         },
-                                        "recent": {
-                                            "type": "object",
-                                            "properties": {
-                                                "writing": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object",
-                                                        "additionalProperties": {}
-                                                    }
-                                                },
-                                                "finding": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object",
-                                                        "additionalProperties": {}
-                                                    }
-                                                },
-                                                "collection": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object",
-                                                        "additionalProperties": {}
-                                                    }
-                                                }
-                                            },
-                                            "required": [
-                                                "writing",
-                                                "finding",
-                                                "collection"
-                                            ]
-                                        },
-                                        "popular": {
-                                            "type": "object",
-                                            "properties": {
-                                                "writing": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object",
-                                                        "additionalProperties": {}
-                                                    }
-                                                },
-                                                "finding": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object",
-                                                        "additionalProperties": {}
-                                                    }
-                                                },
-                                                "collection": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object",
-                                                        "additionalProperties": {}
-                                                    }
-                                                }
-                                            },
-                                            "required": [
-                                                "writing",
-                                                "finding",
-                                                "collection"
-                                            ]
+                                        "feed": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object",
+                                                "additionalProperties": {}
+                                            }
                                         },
                                         "portfolio": {
                                             "type": "object",
@@ -1079,43 +1036,8 @@
                                                 "highlights": {
                                                     "type": "integer"
                                                 },
-                                                "recent": {
-                                                    "type": "object",
-                                                    "properties": {
-                                                        "writing": {
-                                                            "type": "integer"
-                                                        },
-                                                        "finding": {
-                                                            "type": "integer"
-                                                        },
-                                                        "collection": {
-                                                            "type": "integer"
-                                                        }
-                                                    },
-                                                    "required": [
-                                                        "writing",
-                                                        "finding",
-                                                        "collection"
-                                                    ]
-                                                },
-                                                "popular": {
-                                                    "type": "object",
-                                                    "properties": {
-                                                        "writing": {
-                                                            "type": "integer"
-                                                        },
-                                                        "finding": {
-                                                            "type": "integer"
-                                                        },
-                                                        "collection": {
-                                                            "type": "integer"
-                                                        }
-                                                    },
-                                                    "required": [
-                                                        "writing",
-                                                        "finding",
-                                                        "collection"
-                                                    ]
+                                                "feed": {
+                                                    "type": "integer"
                                                 },
                                                 "portfolio": {
                                                     "type": "object",
@@ -1162,8 +1084,7 @@
                                             },
                                             "required": [
                                                 "highlights",
-                                                "recent",
-                                                "popular",
+                                                "feed",
                                                 "portfolio",
                                                 "collection_showcases"
                                             ]
@@ -1171,8 +1092,7 @@
                                     },
                                     "required": [
                                         "highlights",
-                                        "recent",
-                                        "popular",
+                                        "feed",
                                         "portfolio",
                                         "collection_showcases",
                                         "totals"
